--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="images/tc-logo.png" alt="tc-logo">
     <img class="press-img" src="images/tnw.png" alt="tnw-logo">
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-img" src="images/mashable.png" alt="mashable-logo">
@@ -168,8 +168,8 @@
           </div>
           <div class="card-body">
             <h2>$49 / mo</h2>
-            <p>Unlimited Matches</p>
-            <p>Unlimited Messages</p>
+            <p>30 Matches Per Day</p>
+            <p>100 Messages Per Day</p>
             <p>Unlimited App Usage</p>
             <div class="d-grid gap-2">
               <button type="button" class="btn btn-dark btn-lg">Sign up</button>
