--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="icon" href="favicon.ico">
   <title>TinDog</title>
 
   <!-- Google Fonts -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
     </style>
 
   <!-- Font Awesome -->
