--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-    </style>
+  </style>
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/6a8f4de875.js" crossorigin="anonymous"></script>
@@ -35,10 +35,9 @@
 
   <section id="title">
 
-    <!-- Nav Bar -->
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">tindog</a>
+        <a class="navbar-brand" href="index.html">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -128,16 +127,6 @@
     </div>
   </section>
 
-
-  <!-- Press -->
-
-  <section id="press">
-    <img class="press-img" src="images/tc-logo.png" alt="tc-logo">
-    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
-  </section>
-
   <!-- Pricing -->
 
   <section id="pricing">
@@ -209,7 +198,7 @@
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-light btn-lg download-btn"><i class="fab fa-google-play"></i> Download</button>
- 
+
   </section>
 
 
@@ -221,14 +210,14 @@
     <i class="footer-icons fab fa-facebook-f fa-1x"></i>
     <i class="footer-icons fab fa-instagram fa-1x"></i>
     <i class="footer-icons fas fa-envelope fa-1x"></i>
-    
 
-    <p>© Copyright 2021 TinDog</p>
+
+    <p>© Copyright 2021 Tindog</p>
 
   </footer>
 
 
-
+<script src="./css/index.js"></script>
   <!-- Popper and Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
     integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
@@ -239,4 +228,3 @@
 </body>
 
 </html>
-
